tests/snapshots/run_wpt_conformance__coreml_softsign_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign float16 4D tensor",
    "coreml",
    "PASS",
)
