tests/snapshots/run_wpt_conformance__coreml_softsign_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign float32 4D tensor",
    "coreml",
    "PASS",
)
