tests/snapshots/run_wpt_conformance__coreml_softsign_negative_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign negative float16 1D tensor",
    "coreml",
    "PASS",
)
