tests/snapshots/run_wpt_conformance__coreml_softsign_negative_float32_0D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign negative float32 0D tensor",
    "coreml",
    "PASS",
)
